# verselect

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
tests/: conftest.py  test_configs.py  test_exceptions.py  test_main.py  test_routing.py  test_testing.py
tests/_resources/: app_for_testing_dependencies.py  app_for_testing_headers.py  app_for_testing_routing.py  app_that_raises_errors.py  utils.py
tests/_resources/app_with_duplicate_schemas/: app.py  create_schemas.py  update_schemas.py
tests/_resources/cadwyn_versioned_app/: app.py  versions.py
tests/_resources/cadwyn_versioned_app/latest/: __init__.py
tests/_resources/cadwyn_versioned_app/v2021_01_01/: __init__.py
tests/_resources/cadwyn_versioned_app/v2022_02_02/: __init__.py
tests/_resources/versioned_app/: app.py  v2021_01_01.py  v2022_01_02.py  webhooks.py
tests/assembly/: test_endpoints.py  test_error_handlers.py  test_main.py  test_responses.py
tests/dependencies/: test_headers.py  test_monite_auth.py
tests/middlewares/: test_msgpack.py
verselect/: __init__.py  app.py  apps.py  configs.py  exceptions.py  middleware.py  responses.py  routing.py  testing.py  utils.py
verselect/assembly/: app.py  endpoints.py  error_handlers.py  responses.py
verselect/dependencies/: __init__.py  headers.py  monite_auth.py  versioning.py
verselect/docs/: docs.html
verselect/middlewares/: headers.py  logs.py  msgpack.py  prometheus.py
